--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dpcc",
   "version": "0.1.0",
   "devDependencies": {
+    "brfs": "^1.4.3",
     "grunt": "~0.4.5",
     "grunt-browserify": "^5.2.0",
     "grunt-contrib-copy": "^1.0.0"
