--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "devDependencies": {
     "brfs": "^1.4.3",
+    "connect": "^3.6.5",
     "grunt": "~0.4.5",
     "grunt-browserify": "^5.2.0",
-    "grunt-contrib-copy": "^1.0.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "serve-static": "^1.13.1"
   },
   "homepage": "https://github.com/umd-coding-workshop/dpcc",
   "repository": "umd-coding-workshop/dpcc",
